--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -74,7 +74,7 @@
     <string name="bluetooth_devices" msgid="1063177983261608277">"‏מכשירי Bluetooth"</string>
     <string name="bluetooth_device_name" msgid="1294669733490268384">"שם המכשיר"</string>
     <string name="bluetooth_device_details" msgid="630702184344217832">"הגדרות המכשיר"</string>
-    <string name="bluetooth_profile_details" msgid="1269419918127093325">"הגדרות פרופיל"</string>
+    <string name="bluetooth_profile_details" msgid="1269419918127093325">"הגדרות הפרופיל"</string>
     <string name="bluetooth_name_not_set" msgid="4654357917928126208">"לא הוגדר שם, משתמש בשם החשבון"</string>
     <string name="bluetooth_scan_for_devices" msgid="8143654526358934069">"חיפוש מכשירים"</string>
     <string name="bluetooth_rename_device" msgid="4219655243836021443">"שינוי שם המכשיר"</string>
@@ -1363,7 +1363,7 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"פועל"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"פועל – מבוסס על זיהוי פנים"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"זיהוי פנים"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"התאמה אוטומטית של כיוון המסך כשמזיזים את הטלפון ממאוזן למאונך ולהיפך"</string>
+    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"שינוי אוטומטי של כיוון המסך כשהופכים את הטלפון ממצב של תצוגה לאורך למצב של תצוגה לרוחב"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"מידע נוסף על הסיבוב האוטומטי"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"בעת הזזת הטלפון ממצב \'לאורך\' למצב \'לרוחב\' ולהיפך"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"רזולוציית המסך"</string>
