--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -2339,7 +2339,7 @@
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Tumia kipengele cha kugusa mara tatu"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"Huenda hali hii ikapunguza kasi ya kibodi yako"</string>
     <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Unapotumia kipengele cha kugusa mara tatu ili kukuza sehemu ya skrini yako, huenda ukatambua hitilafu kwenye kibodi.\n\nIli uepuke hali hii, unaweza kubadilisha njia yako ya mkato ya ukuzaji kutoka kugusa mara tatu na utumie chaguo lingine.\n"<annotation id="link">"Badilisha mipangilio"</annotation></string>
-    <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Endelea licha ya hayo"</string>
+    <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Endelea tu"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Ghairi"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"Mipangilio ya ukuzaji"</string>
     <string name="accessibility_screen_magnification_gestures_title" msgid="3121714118381882167">"Kuza kwa kugusa mara tatu"</string>
@@ -2355,7 +2355,7 @@
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Mipangilio ya ukubwa wa skrini na maandishi imebadilishwa"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Ungependa kubadilisha ukubwa wa skrini na maandishi?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Mapendeleo ya maandishi na ukubwa wa skrini yako yatarejeshwa kwenye mipangilio halisi ya simu"</string>
-    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Badilisha"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Weka upya"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Una mipango yoyote ya wikendi?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Ninaelekea ufukweni. Ungependa kuja?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Chaguo"</string>
@@ -2455,9 +2455,9 @@
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Njia ya mkato ya ugeuzaji rangi"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Ugeuzaji rangi hubadilisha skrini zenye mwangaza kuwa nyeusi. Pia hubadilisha skrini nyeusi kuwa zenye mwangaza."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Kumbuka&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Rangi zitabadilika kwenye maudhui na picha&lt;/li&gt; &lt;li&gt; Ugeuzaji rangi unafanya kazi kwenye programu zote&lt;/li&gt; &lt;li&gt; Ili uonyeshe mandharinyuma meusi, Mandhari meusi yanaweza kutumika badala yake&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Kubofya kiotomatiki (muda wa kuchukua hatua)"</string>
-    <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Kuhusu kubofya kiotomatiki (kuchukua hatua baada ya kiteuzi kusimama)"</string>
-    <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Pata maelezo zaidi kuhusu kubofya kiotomatiki (kuchukua hatua baada ya kiteuzi kusimama)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Kubofya kiotomatiki (muda kabla ya kubofya kiotomatiki)"</string>
+    <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Kuhusu kubofya kiotomatiki (muda kabla ya kubofya kiotomatiki)"</string>
+    <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Pata maelezo zaidi kuhusu kubofya kiotomatiki (muda kabla ya kubofya kiotomatiki)"</string>
     <string name="accessibility_autoclick_intro_text" msgid="8959680635470639347">"Unaweza kuweka mipangilio ya kipanya kilichounganishwa ili ubofye kiotomatiki wakati ambapo kiteuzi kinaacha kusogea kwa muda fulani"</string>
     <string name="accessibility_autoclick_description" msgid="6695732131412361101">"Kubofya kiotomatiki kunaweza kusaidia iwapo ni vigumu kubofya kipanya"</string>
     <string name="accessibility_autoclick_default_title" msgid="2024730028293793490">"Kubofya kiotomatiki kumezimwa"</string>
@@ -4073,7 +4073,7 @@
     <string name="picture_in_picture_app_detail_summary" msgid="2503211101305358849">"Ruhusu programu hii iunde kidirisha cha picha ndani ya picha wakati programu imefunguka au baada ya kuifunga (kwa mfano, ili uendelee kutazama video). Kidirisha hiki kitaonekana juu ya programu zingine unazotumia."</string>
     <string name="interact_across_profiles_title" msgid="7285906999927669971">"Programu za kazi na za binafsi pamoja"</string>
     <string name="interact_across_profiles_summary_allowed" msgid="1365881452153799092">"Imeunganishwa"</string>
-    <string name="interact_across_profiles_summary_not_allowed" msgid="5802674212788171790">"Haijaunganishwa"</string>
+    <string name="interact_across_profiles_summary_not_allowed" msgid="5802674212788171790">"Hazijaunganishwa"</string>
     <string name="interact_across_profiles_empty_text" msgid="419061031064397168">"Hakuna programu zilizounganishwa"</string>
     <string name="interact_across_profiles_keywords" msgid="5996472773111665049">"sehemu ya wasifu programu zilizounganishwa programu za kazini na binafsi"</string>
     <string name="interact_across_profiles_app_detail_title" msgid="7776184211173575648">"Programu za kazi na za binafsi pamoja"</string>
@@ -4200,7 +4200,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"simu"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"Simu zinazoweza kukatiza"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"Ili uhakikishe kuwa simu zinazoruhusiwa zinatoa sauti, hakikisha umeweka mipangilio ya kifaa kulia"</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Kwa ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ simu zinazoingia zimezuiwa. Unaweza kubadilisha mipangilio ili uwaruhusu marafiki, familia na watu wengine wawasiliane nawe."</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Kwa hali ya ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’, simu zinazoingia zimezuiwa. Unaweza kubadilisha mipangilio ili uwaruhusu marafiki, familia na watu wengine wawasiliane nawe."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"Anwani zenye nyota"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{Hamna}=1{{contact_1}}=2{{contact_1} na {contact_2}}=3{{contact_1}, {contact_2} na {contact_3}}other{{contact_1}, {contact_2} na zingine #}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(Hakuna jina)"</string>
