--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -613,7 +613,7 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Հեռացնե՞լ բոլոր մատնահետքերը"</string>
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Հեռացնե՞լ <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> մատնահետքը"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ջնջե՞լ այս մատնահետքը։"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի հետ կապված պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
+    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ աշխատանքային պրոֆիլն ապակողպելու, գնումները հաստատելու կամ աշխատանքային հավելվածներ մուտք գործելու համար։"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Այո, հեռացնել"</string>
@@ -5129,7 +5129,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"Տեսանյութեր"</string>
     <string name="storage_audio" msgid="5994664984472140386">"Աուդիո"</string>
     <string name="storage_apps" msgid="3564291603258795216">"Հավելվածներ"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ նյութեր"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ ֆայլեր"</string>
     <string name="storage_system" msgid="8472410119822911844">"Համակարգ"</string>
     <string name="storage_trash" msgid="2807138998886084856">"Աղբարկղ"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Դատարկե՞լ աղբարկղը"</string>
