--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -621,7 +621,7 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Usunąć wszystkie odciski palców?"</string>
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Usuń „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Czy chcesz usunąć ten odcisk palca?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ta czynność usuwa zapisane na urządzeniu obrazy i modele odcisku palca powiązane z: „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
+    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ta czynność usuwa zapisane na urządzeniu obrazy i modele odcisku palca powiązane z „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Nie będzie można używać odcisku palca do odblokowywania telefonu i potwierdzania tożsamości w aplikacjach."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Nie będzie można używać odcisku palca do odblokowywania profilu służbowego, zatwierdzania zakupów czy logowania się w aplikacjach służbowych."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Tak, usuń"</string>
@@ -2385,7 +2385,7 @@
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"Powiększanie ekranu trzykrotnym kliknięciem opóźnia pisanie i inne działania.\n\nPrzycisk ułatwień dostępu pływa na ekranie przed innymi aplikacjami. Kliknij go, aby powiększyć."</string>
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"Zmień na przycisk ułatwień dostępu"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Używaj trzykrotnego kliknięcia"</string>
-    <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"Może to spowolnić klawiaturę"</string>
+    <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"To może spowolnić klawiaturę"</string>
     <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Gdy używasz trzykrotnego kliknięcia do powiększenia fragmentu ekranu, możesz zauważyć problemy dotyczące klawiatury.\n\nAby ich uniknąć, możesz zmienić skrót powiększania z trzykrotnego kliknięcia na inny.\n"<annotation id="link">"Zmień ustawienie"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Kontynuuj mimo to"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Anuluj"</string>
@@ -2503,7 +2503,7 @@
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Skrót do odwrócenia kolorów"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Odwrócenie kolorów zamienia jasne obszary na ciemne. Z kolei ciemne obszary zamienia na jasne."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Pamiętaj&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Zmienią się kolory w multimediach i na obrazach&lt;/li&gt; &lt;li&gt; Odwrócenie kolorów działa we wszystkich aplikacjach&lt;/li&gt; &lt;li&gt; Ciemne tło można też wyświetlać w ciemnym motywie&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Automatyczne kliknięcie (czas oczekiwania)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Automatyczne kliknięcie (czas kontaktu)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"O automatycznym kliknięciu (czas kontaktu)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Więcej informacji o automatycznym kliknięciu (czas kontaktu)"</string>
     <string name="accessibility_autoclick_intro_text" msgid="8959680635470639347">"Możesz skonfigurować automatyczne kliknięcie podłączoną myszą, gdy kursor nie przesuwa się od pewnego czasu"</string>
@@ -3823,7 +3823,7 @@
     <string name="live_caption_summary" msgid="2898451867595161809">"Automatycznie wyświetlaj napisy do multimediów"</string>
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"Głośnik telefonu"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Słuchawki przewodowe"</string>
-    <string name="spatial_audio_text" msgid="8201387855375146000">"Dźwięk ze zgodnych multimediów ma jeszcze lepszą jakość"</string>
+    <string name="spatial_audio_text" msgid="8201387855375146000">"Dźwięk z kompatybilnych multimediów ma jeszcze lepszą jakość"</string>
     <string name="spatial_summary_off" msgid="8272678804629774378">"Wyłączono"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Włączony / <xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Włączony / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> i <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
@@ -5295,7 +5295,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"Filmy"</string>
     <string name="storage_audio" msgid="5994664984472140386">"Dźwięk"</string>
     <string name="storage_apps" msgid="3564291603258795216">"Aplikacje"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"Dokumenty i inne dane"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"Dokumenty i inne pliki"</string>
     <string name="storage_system" msgid="8472410119822911844">"System"</string>
     <string name="storage_trash" msgid="2807138998886084856">"Kosz"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Opróżnić kosz?"</string>
