--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -1418,7 +1418,7 @@
     <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Horário"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Nenhum"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ativado do pôr ao nascer do sol"</string>
-    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"É ativado à hora personalizada"</string>
+    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ativado à hora personalizada"</string>
     <string name="dark_ui_auto_mode_custom_bedtime" msgid="8465023741946439266">"É ativado à hora de dormir"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Estado"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"Nunca se ativa automaticamente"</string>
@@ -3444,7 +3444,7 @@
     <string name="nfc_payment_default" msgid="3769788268378614608">"Pagamento predefinido"</string>
     <string name="nfc_payment_default_not_set" msgid="6471905683119084622">"Não definida"</string>
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> – <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
-    <string name="nfc_payment_use_default" msgid="6127665705799658860">"Utilize a app de pagamentos predefinida"</string>
+    <string name="nfc_payment_use_default" msgid="6127665705799658860">"Usar a app de pagamentos predefinida"</string>
     <string name="nfc_payment_use_default_dialog" msgid="8556328090777785383">"Utilize a app de pagamentos predefinida"</string>
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Sempre"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Exceto enquanto outra app de pagamentos está aberta"</string>
@@ -4418,7 +4418,7 @@
     <string name="runtime_permissions_summary_control_app_access" msgid="3744591396348990500">"Controle o acesso de apps aos seus dados"</string>
     <string name="permissions_usage_title" msgid="2942741460679049132">"Painel de privacidade"</string>
     <string name="permissions_usage_summary" msgid="6784310472062516454">"Mostrar apps que usaram autorizações recentemente"</string>
-    <string name="unused_apps" msgid="4566272194756830656">"Apps não utilizadas"</string>
+    <string name="unused_apps" msgid="4566272194756830656">"Apps não usadas"</string>
     <plurals name="unused_apps_summary" formatted="false" msgid="3827583582750975783">
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> apps não utilizadas</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> app não utilizada</item>
@@ -4589,7 +4589,7 @@
     </plurals>
     <string name="running_frequency" msgid="7260225121706316639">"Frequência"</string>
     <string name="memory_maximum_usage" msgid="2047013391595835607">"Utilização máxima"</string>
-    <string name="no_data_usage" msgid="4665617440434654132">"Sem dados utilizados"</string>
+    <string name="no_data_usage" msgid="4665617440434654132">"Sem dados usados"</string>
     <string name="zen_access_warning_dialog_title" msgid="6323325813123130154">"Permitir o acesso a Não incomodar para <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_warning_dialog_summary" msgid="8468714854067428987">"A aplicação conseguirá ligar e desligar o modo Não incomodar e efetuar alterações nas definições relacionadas."</string>
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Tem de permanecer ativado porque o acesso às notificações está ativado"</string>
